# CBoy-Emulator

./: CMakeLists.txt
gbemu/: CMakeLists.txt  emu.c  main.c
include/: bus.h  cart.h  cpu.h  emu.h  ppu.h
lib/: CMakeLists.txt  cart.c  cpu.c  emu.c
